--- a/TA_CTIS_TAXII/package/lib/requirements.txt
+++ b/TA_CTIS_TAXII/package/lib/requirements.txt
@@ -1,4 +1,11 @@
-cattrs
+# Splunk Version 9.1 and 9.2 still use Python 3.7
+# Last supported version of typing-extensions for Python 3.7
+# https://github.com/python/typing_extensions/releases/tag/4.7.1
+typing-extensions==4.7.1
+
+# Latest cattrs version that still supports Python 3.7
+# See: https://github.com/python-attrs/cattrs/pull/424
+cattrs==23.1.2
 attrs
 stix2
 stix2-patterns
