feat(unit tests): Run unit tests on Python 3.7 and 3.9 feat(requirements): Set specific attrs version

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -8,9 +8,16 @@ on:
 
 jobs:
     unit-test:
+        strategy:
+            matrix:
+                python-version: ["3.7", "3.9"]
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v4
+            -   name: Set up Python ${{ matrix.python-version }}
+                uses: actions/setup-python@v5
+                with:
+                    python-version: ${{ matrix.python-version }}
             -   name: List
                 run: pwd && ls -l
             -   name: Install pytest
