fix(package): Remove upterm ssh

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -98,10 +98,10 @@ jobs:
                     path: integration_test
             -   name: list
                 run: pwd && ls -l
-            -   name: Setup upterm session
-                uses: lhotari/action-upterm@v1
-                with:
-                    limit-access-to-actor: true
+#            -   name: Setup upterm session
+#                uses: lhotari/action-upterm@v1
+#                with:
+#                    limit-access-to-actor: true
             -   name: Spin up Docker Splunk with app
                 run: cd integration_test && ./spin-up-docker-splunk.sh
                 env:
