--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -2,9 +2,11 @@ name: Test, Package & Release App
 
 on:
     push:
-        branches: [ "main" ]
-    pull_request:
-        branches: [ "main" ]
+        branches:
+            - main
+            - "fix**"
+            - "feat**"
+            - "test**"
 
 jobs:
     unit-test:
@@ -53,6 +55,8 @@ jobs:
                     name: app
 
     release:
+        # Only run when push into main branch
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         runs-on: ubuntu-latest
         needs: [ package ]
         permissions:
@@ -82,8 +86,9 @@ jobs:
         strategy:
             matrix:
                 splunk_version:
-                    - latest                    
                     - 9.2
+                    - 9.3
+                    - 9.4
         steps:
             -   uses: actions/checkout@v4
             -   name: Setup Node.js
