--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,13 +7,15 @@ on:
             - "fix**"
             - "feat**"
             - "test**"
+env:
+    RUNNER_LABEL: ubuntu-22.04
 
 jobs:
     unit-test:
         strategy:
             matrix:
                 python-version: ["3.7", "3.9"]
-        runs-on: ubuntu-latest
+        runs-on: ${{ env.RUNNER_LABEL }}
         steps:
             -   uses: actions/checkout@v4
             -   name: Set up Python ${{ matrix.python-version }}
@@ -29,7 +31,7 @@ jobs:
             -   name: Run unit tests
                 run: python -m pytest -v TA_CTIS_TAXII/test/ --doctest-modules --junitxml=junit/test-results.xml --cov=TA_CTIS_TAXII/test/ --cov-report=xml --cov-report=html
     package:
-        runs-on: ubuntu-latest
+        runs-on: ${{ env.RUNNER_LABEL }}
         needs: [ unit-test ]
         permissions:
             contents: write # to be able to publish a GitHub release
@@ -57,7 +59,7 @@ jobs:
     release:
         # Only run when push into main branch
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        runs-on: ubuntu-latest
+        runs-on: ${{ env.RUNNER_LABEL }}
         needs: [ package ]
         permissions:
             contents: write # to be able to publish a GitHub release
@@ -80,7 +82,7 @@ jobs:
                 run: npx semantic-release
 
     integration-test:
-        runs-on: ubuntu-latest
+        runs-on: ${{ env.RUNNER_LABEL }}
         needs: [ package ]
         environment: main
         strategy:
