--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout main
         uses: actions/checkout@v4
+      - name: List dir
+        run: pwd && ls -lR
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
