--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install Python dependencies
         run: pip install mkdocs
       - name: Build and deploy documentation
+        # Deploys to gh-pages branch by default
         run: mkdocs gh-deploy --config-file ./docs/cits-taxii-splunk-app/mkdocs.yml
 
   unit-test:
