--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   docs:
     name: Deploy mkdocs to GitHub Pages
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     permissions:
       contents: write
