docs: Use material theme. Introduce more stub pages

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout main
         uses: actions/checkout@v4
       - name: Install Python dependencies
-        run: pip install mkdocs
+        run: pip install ./docs/ctis-taxii-splunk-app/requirements.txt
       - name: Build and deploy documentation
         # Deploys to gh-pages branch by default
         run: mkdocs gh-deploy -v --force --config-file ./docs/ctis-taxii-splunk-app/mkdocs.yml
