--- a/docs/ctis-taxii-splunk-app/mkdocs.yml
+++ b/docs/ctis-taxii-splunk-app/mkdocs.yml
@@ -2,6 +2,11 @@ site_name: CTIS TAXII Splunk App Documentation
 nav:
   - Home: index.md
   - Installation: installation.md
+  - User Guide: user-guide.md
 theme:
-  name: readthedocs
-  collapse_navigation: false
+  name: material
+  features:
+    - navigation.sections
+    - navigation.expand
+    - navigation.path
+    - toc.integrate
