--- a/docs/ctis-taxii-splunk-app/mkdocs.yml
+++ b/docs/ctis-taxii-splunk-app/mkdocs.yml
@@ -3,6 +3,7 @@ nav:
   - Home: index.md
   - Installation: installation.md
   - User Guide: user-guide.md
+  - Troubleshooting: troubleshooting.md
 theme:
   name: material
   features:
