ci: Remove package job permissions

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -46,26 +46,12 @@ jobs:
   package:
     runs-on: ubuntu-22.04
     needs: [ unit-test ]
-    permissions:
-      contents: write # to be able to publish a GitHub release
-      issues: write # to be able to comment on released issues
-      pull-requests: write # to be able to comment on released pull requests
-      id-token: write # to enable use of OIDC for npm provenance
     steps:
       - uses: actions/checkout@v4
       - name: List
         run: pwd && ls -l
       - name: Setup Dependencies & Build and Package App
-        run: |
-          ./install_deps_and_package.sh
-#      - name: Install UCC
-#        run: pip install splunk-add-on-ucc-framework && pip freeze
-#      - name: Build component lib
-#        run: pwd && cd packages/my-react-component && npm install
-#      - name: Yarn setup
-#        run: pwd && yarn setup
-#      - name: Package App
-#        run: cd integration_test && ./package.sh
+        run: ./install_deps_and_package.sh
       - name: Upload app artifact
         uses: actions/upload-artifact@v4
         with:
