fix: Testing patch versioning

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,6 +3,12 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     [
+      "@semantic-release/exec",
+      {
+        "publishCmd": "echo ${nextRelease.version}"
+      }
+    ],
+    [
       "@semantic-release/github",
       {
         "assets": [
