fix: WIP on packaging app with TA version set to the git tag version

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -81,6 +81,7 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # Using .releaserc.json to configure semantic-release
         run: | 
           npm install @semantic-release/exec
           npx semantic-release
