--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -62,7 +62,7 @@ jobs:
     # Only run when push into main branch
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-22.04
-    needs: [ package ]
+    needs: [ unit-test ]
     permissions:
       contents: write # to be able to publish a GitHub release
       issues: write # to be able to comment on released issues
@@ -74,10 +74,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - name: Download app artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
