fix: WIP on packaging app with TA version set to the git tag version - create dist directory

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,7 +12,7 @@
       "@semantic-release/github",
       {
         "assets": [
-          { "path": "$GITHUB_WORKSPACE/dist/*.tar.gz", "label": "App Build" }
+          { "path": "dist/*.tar.gz", "label": "App Build" }
         ]
       }
     ]
