--- a/docs/ctis-taxii-splunk-app/mkdocs.yml
+++ b/docs/ctis-taxii-splunk-app/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: CTIS TAXII Splunk App Documentation
 nav:
   - Home: index.md
   - Installation: installation.md
+  - Configuration: configuration.md
   - User Guide: user-guide.md
   - Troubleshooting: troubleshooting.md
 theme:
