docs: WIP on Installation docs, plus added to configuration and technical notes

--- a/docs/ctis-taxii-splunk-app/mkdocs.yml
+++ b/docs/ctis-taxii-splunk-app/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Configuration: configuration.md
   - User Guide: user-guide.md
   - Troubleshooting: troubleshooting.md
+  - Technical Notes: technical-notes.md
 theme:
   name: material
   features:
