--- a/docs/ctis-taxii-splunk-app/mkdocs.yml
+++ b/docs/ctis-taxii-splunk-app/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - Home: index.md
   - Installation: installation.md
   - Configuration: configuration.md
-  - User Guide: user-guide.md
+  - User Guide - Curating and Sharing CTI: user-guide.md
   - Troubleshooting: troubleshooting.md
   - Technical Notes: technical-notes.md
 theme:
