--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -96,6 +96,7 @@ jobs:
         uses: splunk/appinspect-cli-action@v1
         with:
           app_path: ./ctis.tar.gz
+          included_tags: cloud
 
   integration-test:
     runs-on: ubuntu-22.04
