ci: appinspect CLI action: expect check_for_binary_files_without_source_code failure

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -77,7 +77,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Using .releaserc.json to configure semantic-release
-        run: | 
+        run: |
           npm install @semantic-release/exec
           npx semantic-release
 
@@ -86,6 +86,7 @@ jobs:
     needs: [ package ]
     environment: main
     steps:
+      - uses: actions/checkout@v4
       - name: Download app artifact
         uses: actions/download-artifact@v4
         with:
