--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -92,7 +92,7 @@ jobs:
         with:
           name: app
       - name: list
-        run: pwd && ls -l
+        run: pwd && ls -la
       - name: Run Splunk App-Inspect CLI Action
         uses: splunk/appinspect-cli-action@v1
         with:
