--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -98,6 +98,7 @@ jobs:
         with:
           app_path: ./ctis.tar.gz
           included_tags: cloud
+          expected_failure_markdown: .appinspect.expect.yaml
 
   integration-test:
     runs-on: ubuntu-22.04
