--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,6 +9,12 @@
       }
     ],
     [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "mkdocs build -v --config-file ./docs/ctis-taxii-splunk-app/mkdocs.yml"
+      }
+    ],
+    [
       "@semantic-release/github",
       {
         "assets": [
