--- a/docs/ctis-taxii-splunk-app/requirements.txt
+++ b/docs/ctis-taxii-splunk-app/requirements.txt
@@ -1,16 +1,21 @@
 babel==2.17.0
 backrefs==5.8
+beautifulsoup4==4.13.4
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 ghp-import==2.1.0
+greenlet==3.2.4
 idna==3.10
 Jinja2==3.1.6
+libsass==0.23.0
+lxml==6.0.0
 Markdown==3.8
 MarkupSafe==3.0.2
 mergedeep==1.3.4
 mkdocs==1.6.1
+mkdocs-exporter==6.2.0
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.6.14
 mkdocs-material-extensions==1.3.1
@@ -18,12 +23,17 @@ packaging==25.0
 paginate==0.5.7
 pathspec==0.12.1
 platformdirs==4.3.8
+playwright==1.54.0
+pyee==13.0.0
 Pygments==2.19.1
 pymdown-extensions==10.15
+pypdf==6.0.0
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 pyyaml_env_tag==1.1
 requests==2.32.4
 six==1.17.0
+soupsieve==2.7
+typing_extensions==4.14.1
 urllib3==2.4.0
 watchdog==6.0.0
