fix: docs - generate pdf - debug install playwright browser

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -81,7 +81,7 @@ jobs:
         # Using .releaserc.json to configure semantic-release
         run: |
           pip install -r ./docs/ctis-taxii-splunk-app/requirements.txt
-          playwright install
+          playwright install chromium --with-deps
           npm install @semantic-release/exec
           npx semantic-release
 
