fix: docs - generate pdf - add doc pdf to release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -18,7 +18,8 @@
       "@semantic-release/github",
       {
         "assets": [
-          { "path": "dist/*.tar.gz", "label": "App Build" }
+          { "path": "dist/*.tar.gz", "label": "App Build" },
+          { "path": "docs/ctis-taxii-splunk-app/documentation.pdf", "label": "Documentation" }
         ]
       }
     ]
