feat: Use new common_rest_handler_entrypoint.py as entrypoint for all REST endpoints. This handles sys.path fixes for imports. In restmap.conf, the script.param is used to pass the name of the AbstractRestHandler subclass to use.
chore: remove unused test endpoint rest_hello_world.py

--- a/TA_CTIS_TAXII/package/default/restmap.custom.conf
+++ b/TA_CTIS_TAXII/package/default/restmap.custom.conf
@@ -1,151 +1,166 @@
-[script:hello-world]
-match                 = /say-hello
-script                = rest_hello_world.py
-scripttype            = persist
-python.version        = python3
-handler               = rest_hello_world.HelloWorld
-
 [script:suggest-stix-pattern]
 match                 = /suggest-stix-pattern
-script                = rest_suggest_stix_pattern.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_suggest_stix_pattern.SuggestStixPatternHandler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = SuggestStixPatternHandler
 
 [script:create-indicator]
 match                 = /create-indicator
-script                = rest_create_indicator.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_create_indicator.CreateIndicatorHandler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = CreateIndicatorHandler
 
 [script:list-indicators]
 match                 = /list-indicators
-script                = rest_list_indicators.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_list_indicators.ListIndicatorsHandler
+handler               = common_rest_handler_entrypoint.Handler
+script.param = ListIndicatorsHandler
 
 [script:edit-indicator]
 match                 = /edit-indicator
-script                = rest_edit_indicator.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_edit_indicator.Handler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = EditIndicatorHandler
 
 [script:delete-indicator]
 match                 = /delete-indicator
-script                = rest_delete_indicator.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_delete_indicator.Handler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = DeleteIndicatorHandler
 
 [script:create-identity]
 match                 = /create-identity
-script                = rest_create_identity.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_create_identity.CreateIdentityHandler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = CreateIdentityHandler
 
 [script:edit-identity]
 match                 = /edit-identity
-script                = rest_edit_identity.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_edit_identity.EditIdentityHandler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = EditIdentityHandler
 
 [script:delete-identity]
 match                 = /delete-identity
-script                = rest_delete_identity.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_delete_identity.Handler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = DeleteIdentityHandler
 
 [script:list-identities]
 match                 = /list-identities
-script                = rest_list_identities.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_list_identities.ListIdentitiesHandler
+handler               = common_rest_handler_entrypoint.Handler
+script.param = ListIdentitiesHandler
 
 [script:list-ioc-categories]
 match                 = /list-ioc-categories
-script                = rest_list_indicator_categories.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_list_indicator_categories.ListIndicatorCategoriesHandler
+handler               = common_rest_handler_entrypoint.Handler
+script.param = ListIndicatorCategoriesHandler
 
 [script:create-grouping]
 match                 = /create-grouping
-script                = rest_create_grouping.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_create_grouping.Handler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = CreateGroupingHandler
 
 [script:list-groupings]
 match                 = /list-groupings
-script                = rest_list_groupings.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_list_groupings.Handler
+handler               = common_rest_handler_entrypoint.Handler
+script.param = ListGroupingsHandler
 
 [script:edit-grouping]
 match                 = /edit-grouping
-script                = rest_edit_grouping.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_edit_grouping.Handler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
+script.param = EditGroupingHandler
 
 [script:delete-grouping]
 match                 = /delete-grouping
-script                = rest_delete_grouping.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_delete_grouping.Handler
+handler               = common_rest_handler_entrypoint.Handler
 passPayload = true
-
-[script:list-taxii-collections]
-match                 = /list-taxii-collections
-script                = rest_list_taxii_collections.py
-scripttype            = persist
-python.version        = python3
-handler               = rest_list_taxii_collections.Handler
+script.param = DeleteGroupingHandler
 
 [script:get-stix-bundle-for-grouping]
 match                 = /get-stix-bundle-for-grouping
-script                = rest_get_stix_bundle_for_grouping.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_get_stix_bundle_for_grouping.Handler
-
-[script:submit-grouping]
-match                 = /submit-grouping
-script                = rest_submit_grouping.py
-scripttype            = persist
-python.version        = python3
-handler               = rest_submit_grouping.Handler
-passPayload = true
-
-[script:unschedule-submission]
-match                 = /unschedule-submission
-script                = rest_unschedule_submission.py
-scripttype            = persist
-python.version        = python3
-handler               = rest_unschedule_submission.Handler
+handler               = common_rest_handler_entrypoint.Handler
+script.param = GetStixBundleForGroupingHandler
 passPayload = true
 
 [script:list-submissions]
 match                 = /list-submissions
-script                = rest_list_submissions.py
+script                = common_rest_handler_entrypoint.py
 scripttype            = persist
 python.version        = python3
-handler               = rest_list_submissions.Handler
+handler               = common_rest_handler_entrypoint.Handler
+script.param = ListSubmissionsHandler
+passPayload = true
+
+[script:unschedule-submission]
+match                 = /unschedule-submission
+script                = common_rest_handler_entrypoint.py
+scripttype            = persist
+python.version        = python3
+handler               = common_rest_handler_entrypoint.Handler
+passPayload = true
+script.param = UnscheduleSubmissionHandler
+
+[script:submit-grouping]
+match                 = /submit-grouping
+script                = common_rest_handler_entrypoint.py
+scripttype            = persist
+python.version        = python3
+handler               = common_rest_handler_entrypoint.Handler
+passPayload = true
+script.param = SubmitGroupingHandler
+
+[script:list-taxii-collections]
+match                 = /list-taxii-collections
+script                = common_rest_handler_entrypoint.py
+scripttype            = persist
+python.version        = python3
+handler               = common_rest_handler_entrypoint.Handler
+script.param = ListTaxiiCollectionsHandler
+passPayload = true
